# kivi-agent

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  MIGRATION.md  README.md  RUNBOOK.md  WIRE_PROTOCOL.md  config.example.toml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  trace_permission_flow.py
apps/web-chat/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web-chat/src/: App.vue  env.d.ts  main.ts  router.ts  style.css  test-setup.ts
demos/: __init__.py  base.py  demo1_coding.py  demo2_rag.py  demo3_database.py  demo4_frontend_map.py  demo5_multi_agent.py
demos/fixtures/: demo1_buggy_add.py  demo2_policies.txt  demo3_orders.sql  demo4_geojson_urls.json  demo5_multi_task_input.json
docker/: chatbox.Dockerfile  core.Dockerfile  gateway.Dockerfile
docs/architecture/: architecture.md  data-flow.md
docs/contracts/: v1.md
docs/demo/: demo1_coding.md  demo2_rag.md  demo3_database.md  demo4_frontend_map.md  demo5_multi_agent.md
docs/development/: contributing.md  modules.md
docs/e2e-real/: README.md  RESULTS_TEMPLATE.md
docs/eval-demos/: README.md  basic-routing-10cases.jsonl  coding-6cases.jsonl  team-5cases.jsonl  team-coding-README.md
docs/memory-demos/: README.md
docs/superpowers/plans/: 2026-07-20-kama-agent-minimal-loop.md  2026-07-21-kama-agent-full-merge-scope.md  (+18 more)
docs/迁移记录/: mewcode迁移许可说明.md  wave2-tui-demo-plan.md  最小闭环验收记录.md
scripts/: gen_protocol_doc.py  health_check.sh  pre-commit-check.sh  rename_project.py  run_demos.sh  start.sh  stop.sh
tests/: conftest.py
tests/_fakes/: __init__.py  business_tools.py  event_bus.py  llm.py  socket_client.py
tests/contract/: __init__.py  conftest.py  test_v1_contracts.py  test_v1_smoke.py
tests/e2e/: __init__.py  test_business_agent_e2e.py
tests/e2e_real/: README.md  __init__.py  _protocols.py  conftest.py  report.py  test_db_real.py  test_demo1_coding_e2e.py  test_demo2_rag_e2e.py  test_demo3_database_e2e.py  test_demo4_frontend_map_e2e.py  test_demo5_multi_agent_e2e.py  test_eval_routing_e2e.py  test_fallback.py  test_rag_real.py
tests/e2e_web/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
tests/fixtures/: rag_kb_mock_server.py
tests/integration/: test_anthropic_provider_e2e.py  test_coding_run.py  test_dashboard_coding_e2e.py  test_dashboard_e2e.py  test_dashboard_team_e2e.py  test_demos.py  test_docker_compose.sh  test_eval_run.py  test_failure_injection.py  test_memory_dashboard_e2e.py  test_memory_lifecycle.py  test_openai_compat_e2e.py  test_query_database_real_vs_mock.py  test_rag_query_real_vs_mock.py  test_run_e2e.py  test_s2_dual_process.py  test_s5_permission_flow.py  test_team_run.py  test_vector_backend_e2e.py
tests/performance/: conftest.py  test_benchmarks.py
tests/security/: conftest.py  test_security_baseline.py
tests/sql/: init.sql
tests/unit/: test_agent_profile_loader.py  test_agent_profile_v1.py  test_agent_runtime_protocol.py  test_anthropic_provider.py  test_ask_user_dialog.py  test_ask_user_tool.py  test_audit.py  test_budget.py  test_builtin_skills_v1.py  test_builtin_tools.py  test_business_base.py  test_business_event_handler.py  test_business_event_widget.py  test_business_profile_v1.py  test_business_router.py  test_business_tool_profile_bind.py  test_business_tool_registry.py  test_chart_metadata_widget.py  test_checkpoint.py  test_citation_widget.py  test_coding_agent.py  test_coding_dashboard_api.py  test_coding_models.py  test_coding_store.py  test_commands_events.py  test_commands_v1.py  test_compactor.py  test_config_env.py  test_config_runtime.py  test_context.py  test_context_system_prompt.py  test_contract_version.py  test_coordinator_profile.py  test_dashboard_api.py  test_db_adapters.py  test_dedup.py  test_diff_parser.py  test_diff_tool.py  test_e2e_real_conftest.py  test_e2e_real_report.py  (+115 more)
(+418 files in other folders)
