# kivi-agent 项目配置（PEP 621 + Hatch 构建 + 常用工具链）

# ---- PEP 517：声明如何构建 wheel/sdist ----
[build-system]
requires = ["hatchling"]          # 构建时需要的后端包
build-backend = "hatchling.build" # 使用 Hatchling 作为构建后端

# ---- 项目元数据与运行时依赖（PEP 621）----
[project]
name = "kivi-agent"
version = "0.0.1"
requires-python = ">=3.12,<3.13" # 仅支持 3.12 小版本范围，与 CI/类型检查一致
dependencies = [
    "pydantic>=2.0",       # 数据校验与序列化（含 JSON 模型等）
    "python-dotenv>=1.0",  # .env 文件解析
    "anthropic>=0.25",     # Anthropic LLM SDK（流式 + prompt caching）
    "textual>=0.75",       # 终端 UI 框架（kivi-tui）
    "httpx[socks]>=0.28.1",
    "openai>=2.46.0",
    "elasticsearch[async]>=8.0",
]

# 安装后可在 PATH 中执行的入口：`kivi` / `kivi-core` / `kivi-tui` / `kivi-start` / `kivi-stop` / `kivi-health`
[project.scripts]
kivi = "kivi_agent.cli.main:main"
kivi-core = "kivi_agent.core.app:run"
kivi-tui = "kivi_agent.tui.__main__:main"
kivi-eval = "kivi_agent.cli.eval:main"
# Wave 7 WT-K1: Docker Compose 三模式的 Python 入口（封装 scripts/*.sh）
kivi-start = "kivi_agent.scripts.start:main"
kivi-stop = "kivi_agent.scripts.stop:main"
kivi-health = "kivi_agent.scripts.health:main"

# ---- Hatch：打 wheel 时从 src 布局收录包 ----
[tool.hatch.build.targets.wheel]
packages = ["src/kivi_agent"] # 源码在 src/kivi_agent

# ---- 开发期依赖（PEP 735）----
[dependency-groups]
dev = [
    "ruff>=0.4",            # 快速 linter + import 排序等
    "mypy>=1.10",           # 静态类型检查
    "pytest>=8.0",          # 单元测试
    "pytest-asyncio>=0.23", # 异步测试支持
    "fastapi>=0.110",       # FastAPI Gateway（D 阶段 Web 服务，可选）
    "uvicorn>=0.27",        # ASGI 服务器（运行 FastAPI）
    "websockets>=12.0",     # WebSocket 客户端/服务端协议
    "httpx>=0.27",          # FastAPI TestClient 依赖
    "aiosqlite>=0.19",      # SQLite 异步驱动（WT-F2 DatabaseAdapter SQLite 实现）
    "asyncpg>=0.29",        # Postgres 异步驱动（WT-F2 DatabaseAdapter Postgres 实现）
]

# ---- Ruff：统一代码风格 ----
[tool.ruff]
src = ["src"]            # 分析路径，便于识别第一方代码
line-length = 100        # 行长上限
target-version = "py312" # 语法/规则按 Python 3.12

[tool.ruff.lint]
select = ["E", "F", "I", "UP"] # pycodestyle 错误、Pyflakes、isort、pyupgrade
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]   # 测试文件的中文注释允许超过行宽限制
"scripts/**/*.py" = ["E501"] # 脚本文件的文档字符串允许超过行宽限制

# ---- Mypy：严格类型检查 ----
[tool.mypy]
python_version = "3.12"
strict = true                 # 启用严格模式
mypy_path = "src"             # 将 src 加入模块搜索路径
explicit_package_bases = true # 明确包根，减少隐式命名空间误判

# 第三方库缺失 py.typed 标记的容忍（agent: package-db-real-v4）
[[tool.mypy.overrides]]
module = ["asyncpg"]
ignore_missing_imports = true

# ---- Pytest：默认发现 tests/，异步用例自动管理 event loop ----
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# python_functions 用 "test_*" 形式（强制下划线），
# 防止 src/kivi_agent/eval/metrics/coding.py 里的 tests_passed_rate / test_growth_rate
# 被 pytest 误收集为测试（默认 "test" 前缀会匹配 test* 无下划线的形式）
python_functions = ["test_*"]
python_classes = ["Test*"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests that call the real Anthropic API (require ANTHROPIC_API_KEY)",
]
# Wave 7 WT-K3：3 类基线测试默认跳过（env guard 由各测试文件自己用 pytest.mark.skipif 实现）
# - 故障注入: KIVI_RUN_FAILURE=1
# - 性能基线: KIVI_RUN_PERF=1
# - 安全基线: KIVI_RUN_SECURITY=1
# 普通 `uv run pytest` 不会跑这 3 类；CI / 演示需要时显式打开 env
# （参见 tests/integration/test_failure_injection.py / tests/performance/test_benchmarks.py / tests/security/test_security_baseline.py）
#
# Wave 8.2 WT-L3：真实 LLM E2E 框架默认跳过（KIVI_RUN_E2E=1 才跑，避免无 key 时误扣 token）
# - KIVI_RUN_E2E=1: 启用所有 e2e_real 测试（5 demo + 5 eval case）
# - KIVI_E2E_PROVIDER=anthropic|openai: 选 provider（默认 anthropic）
# - KIVI_E2E_MAX_CASES=N: 限制 eval case 数（默认 5，防 token 失控）
# - KIVI_E2E_REPORT_DIR=path: 报告输出目录（默认 reports/e2e_real/）
# 跑法：KIVI_RUN_E2E=1 KIVI_E2E_PROVIDER=anthropic uv run pytest tests/e2e_real -q
# （参见 tests/e2e_real/conftest.py / tests/e2e_real/README.md）
